overflow-y hidden added to prevent scrolling

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ font-family: 'Arvo', serif;
 html,
 body {
 	overflow-x: hidden;
+	overflow-y: hidden;
 	font-family: 'Montserrat', sans-serif;
 	background-color: #020e13;
 }
